# kic-web-assistant

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .sops.yaml  README.MD  Taskfile.yml  docker-compose.yaml  encrypted.env  pyproject.toml
exploration/: course-contents.ipynb  data.ipynb  llm.ipynb  moochup.ipynb  self-querying.ipynb  test.ipynb  vertexai.ipynb
exploration/data/api-examples/: core_block_get_course_blocks.json  core_course_get_contents.json  core_course_get_course_content_items.json  core_course_get_course_module.json  core_course_get_module.html
src/: env.py  extraction.py  helpers.py  inference.py
src/api/: Dockerfile  gunicorn.conf.py  rest.py
src/api/models/: serializable_chat_message.py
src/embedder/: Dockerfile  embedding_api.py  multilingual_e5_large.py
src/frontend/: Dockerfile  LLMs.py  frontend.py
src/llm/: LLMs.py  assistant.py  inference.py  prompts.py  retriever.py
src/llm/api/: prod_api_test.rest
src/llm/parser/: OutputParserTool.py  citation_parser.py
src/llm/tools/: contextualizer.py  language_detector.py  question_answerer.py
src/loaders/: APICaller.py  Dockerfile  courses_pipeline.py  drupal.py  extraction_pipeline.py  failed_transcripts.py  function.json  function_app.py  get_data.py  helper.py  host.json  moochup.py  moodle.py  payload.py  splitter.py  vimeo.py  website_pipeline.py  youtube.py
src/loaders/models/: coursetopic.py  downloadablecontent.py  hp5activities.py  module.py  moodlecourse.py  texttrack.py  transcript.py  videotime.py
src/tests/: test_document.py
src/tests/data/: core_course_get_contents.json  index.html  textpage.html
src/tests/embedder/: test_embedder.py
src/tests/llms/: test_citations_parsing.py  test_language_detector.py  test_llm_responses.py
src/tests/loaders/: test_moochup.py  test_moodle.py  test_payload.py
src/tests/vectordb/: test_collection.py
src/vectordb/: qdrant.py
