[tool.poetry]
name = "kic-web-assistant"
version = "0.1.0"
description = "System to guide the users of ki-campus.org"
authors = [
    "Jonas Bremer <jonas.bremer@scieneers.de>",
    "Sebastian Drewke <sebastian.drewke@scieneers.de>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
qdrant-client = "~1.6.9"
fastapi = "~0.104.1"
uvicorn = {extras = ["standard"], version = "~0.24.0.post1"}
llama-index = "^0.9.40"
# Embedding
torch = "~2.1.1"
accelerate = "~0.24.1"
transformers = "~4.35.2"
# Self hosting llms
google-cloud-aiplatform = "~1.36.4"

[tool.poetry.group.embedder]
optional = true
[tool.poetry.group.embedder.dependencies]
requests = "~2.31.0"
pydantic = "~2.5.2"
beautifulsoup4 = "~4.12.2"

[tool.poetry.group.frontend]
optional = true
[tool.poetry.group.frontend.dependencies]
streamlit = "~1.29.0"
openai = "~1.3.6"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
ipykernel = "~6.26.0"
ipywidgets = "~8.1.1"
pytest = "~7.4.3"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
