[tool.poetry]
name = "kic-web-assistant"
version = "0.1.0"
description = "System to guide the users of ki-campus.org"
authors = [
    "Jonas Bremer <jonas.bremer@scieneers.de>",
    "Sebastian Drewke <sebastian.drewke@scieneers.de>",
]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "~3.11"
qdrant-client = "1.10.1"
llama-index = "0.10.68"
llama-index-embeddings-azure-openai = "0.1.11"
llama-index-llms-azure-openai = "0.1.10"
llama-index-llms-openai-like = "0.1.3"
llama-index-llms-azure-inference = "0.1.1"
llama-index-callbacks-langfuse = "0.1.6"
llama-index-vector-stores-qdrant = "0.2.14"
llamaapi = "~0.1.36"
openai = "~1.16.2"
python-dotenv = "~1.0.1"
# Self hosting llms
webvtt-py = "~0.4.6"
# Monitoring
langfuse = "~2.43.1"
youtube-transcript-api = "~0.6.2"
pydantic = "~2.8.2"
azure-keyvault-secrets = "~4.8.0"
lingua-language-detector = "^2.0.2"
retry = "^0.9.2"
openpyxl = "^3.1.5"

[tool.poetry.group.api]
optional = true
[tool.poetry.group.api.dependencies]
fastapi = "~0.112.0"
uvicorn = {extras = ["standard"], version = "~0.24.0.post1"}
gunicorn = "~22.0.0"

[tool.poetry.group.azfunction]
optional = true
[tool.poetry.group.azfunction.dependencies]
azure-functions = "^1.21.3"
requests = "~2.31.0"
beautifulsoup4 = "~4.12.2"

[tool.poetry.group.frontend]
optional = true
[tool.poetry.group.frontend.dependencies]
streamlit = "~1.29.0"
trubrics = {extras = ["streamlit"], version = "~1.6.2"}
streamlit-antd-components = "~0.3.2"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
ipykernel = "~6.26.0"
ipywidgets = "~8.1.1"
pytest = "~7.4.3"
pre-commit = "~3.6.2"
mypy = "~1.9.0"
types-requests = "~2.31.0.20240311"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
